igw.tf
resource "aws_internet_gateway" "lab-igw" {
    vpc_id = aws_vpc.lab-vpc.id

    tags = {
        Name = "lab-igw"
    }
}
